e2e/single-node/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: http-app-svc-1
  labels:
    app: http-app-svc-1
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    nodePort: 30500
  selector:
    app: http-app-1

---
apiVersion: v1
kind: Service
metadata:
  name: http-app-svc-2
  labels:
    app: http-app-svc-2
spec:
  type: NodePort
  ports:
  - port: 4000
    targetPort: 4000
    protocol: TCP
    nodePort: 30400
  selector:
    app: http-app-2

---
apiVersion: v1
kind: Service
metadata:
  name: http-app-svc-3
  labels:
    app: http-app-svc-3
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    nodePort: 30300
  selector:
    app: http-app-3
